--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,8 @@
     {
       "source": "/(.*)\\.br",
       "headers": [
-        {
-          "key": "Content-Encoding",
-          "value": "br"
-        },
-        {
-          "key": "Content-Type",
-          "value": "application/octet-stream"
-        }
+        { "key": "Content-Encoding", "value": "br" },
+        { "key": "Content-Type", "value": "application/octet-stream" }
       ]
     }
   ]
