--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "headers": [
     {
-      "source": "/(.*)\\.br",
+      "source": "/Build/(.*).br",
       "headers": [
         {
           "key": "Content-Encoding",
@@ -9,7 +9,11 @@
         },
         {
           "key": "Content-Type",
-          "value": "application/octet-stream"
+          "value": "application/javascript"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     }
