--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,24 @@
 {
   "headers": [
     {
-      "source": "/Build/(.*).br",
+      "source": "/Build/(.*).wasm.br",
+      "headers": [
+        {
+          "key": "Content-Encoding",
+          "value": "br"
+        },
+        {
+          "key": "Content-Type",
+          "value": "application/wasm"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/Build/(.*).js.br",
       "headers": [
         {
           "key": "Content-Encoding",
