--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,24 @@
 {
   "headers": [
     {
+      "source": "/index.html",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store"
+        }
+      ]
+    },
+    {
+      "source": "/Build/Quantum.loader.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store"
+        }
+      ]
+    },
+    {
       "source": "/Build/(.*).wasm.br",
       "headers": [
         {
