--- a/vercel.json
+++ b/vercel.json
@@ -31,7 +31,7 @@
         },
         {
           "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "value": "no-store"
         }
       ]
     },
@@ -48,7 +48,7 @@
         },
         {
           "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "value": "no-store"
         }
       ]
     },
@@ -65,9 +65,9 @@
         },
         {
           "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "value": "no-store"
         }
       ]
     }
   ]
-} 
+}
